--- a/PRETRACTAMENT/ETO_preprocessing_1.ipynb
+++ b/PRETRACTAMENT/ETO_preprocessing_1.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "ff92b577",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "36df8c62",
    "metadata": {},
    "outputs": [],
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "fe6087cb",
    "metadata": {},
    "outputs": [],
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "32ed35a0",
    "metadata": {},
    "outputs": [],
@@ -54,8 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "e35cf758",
+   "execution_count": 9,
+   "id": "2fca9383",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8965354b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "id": "47806681",
    "metadata": {},
    "outputs": [],
