--- a/PRETRACTAMENT/METEO_preprocessing_1.ipynb
+++ b/PRETRACTAMENT/METEO_preprocessing_1.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "782f1ac7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "ddf7b2d7",
    "metadata": {},
    "outputs": [],
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "936eca72",
    "metadata": {},
    "outputs": [],
@@ -39,6 +47,63 @@
    "metadata": {},
    "source": [
     "Només necessitem dades horàries, que en tinguem suficients i pel 22."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fe635f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1223660 entries, 0 to 1223659\n",
+      "Data columns (total 33 columns):\n",
+      " #   Column                   Non-Null Count    Dtype         \n",
+      "---  ------                   --------------    -----         \n",
+      " 0   validTimeUtc             1223660 non-null  datetime64[ns]\n",
+      " 1   precip1Hour              1223640 non-null  float64       \n",
+      " 2   precip6Hour              1223140 non-null  float64       \n",
+      " 3   precip24Hour             1223540 non-null  float64       \n",
+      " 4   precip2Day               750600 non-null   float64       \n",
+      " 5   precip3Day               750600 non-null   float64       \n",
+      " 6   precip7Day               750600 non-null   float64       \n",
+      " 7   precipMtd                750600 non-null   float64       \n",
+      " 8   precipYtd                750600 non-null   float64       \n",
+      " 9   pressureChange           1223640 non-null  float64       \n",
+      " 10  pressureMeanSeaLevel     867520 non-null   float64       \n",
+      " 11  relativeHumidity         1223660 non-null  float64       \n",
+      " 12  snow1Hour                1223640 non-null  float64       \n",
+      " 13  snow6Hour                1223140 non-null  float64       \n",
+      " 14  snow24Hour               1223540 non-null  float64       \n",
+      " 15  snow2Day                 750600 non-null   float64       \n",
+      " 16  snow3Day                 750600 non-null   float64       \n",
+      " 17  snow7Day                 750600 non-null   float64       \n",
+      " 18  snowMtd                  750600 non-null   float64       \n",
+      " 19  snowSeason               750600 non-null   float64       \n",
+      " 20  snowYtd                  750600 non-null   float64       \n",
+      " 21  temperature              1223640 non-null  float64       \n",
+      " 22  temperatureChange24Hour  1223280 non-null  float64       \n",
+      " 23  temperatureMax24Hour     1223560 non-null  float64       \n",
+      " 24  temperatureMin24Hour     1223560 non-null  float64       \n",
+      " 25  temperatureDewPoint      1223640 non-null  float64       \n",
+      " 26  temperatureFeelsLike     1223640 non-null  float64       \n",
+      " 27  uvIndex                  1223640 non-null  float64       \n",
+      " 28  visibility               1223640 non-null  float64       \n",
+      " 29  windDirection            867520 non-null   float64       \n",
+      " 30  windGust                 125679 non-null   float64       \n",
+      " 31  windSpeed                1223660 non-null  float64       \n",
+      " 32  ID_ESTACION              1223660 non-null  int64         \n",
+      "dtypes: datetime64[ns](1), float64(31), int64(1)\n",
+      "memory usage: 308.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -64,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "2f939fa2",
    "metadata": {},
    "outputs": [],
@@ -74,7 +139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
+   "id": "42f1a75f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "73b6e4d1",
    "metadata": {},
    "outputs": [],
@@ -84,12 +170,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "2c2c8593",
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_to_modify = list(df2.isna().sum()[df2.isna().sum() != 0].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c902c682",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>validTimeUtc</th>\n",
+       "      <th>precip1Hour</th>\n",
+       "      <th>pressureChange</th>\n",
+       "      <th>relativeHumidity</th>\n",
+       "      <th>snow1Hour</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>temperatureDewPoint</th>\n",
+       "      <th>temperatureFeelsLike</th>\n",
+       "      <th>windSpeed</th>\n",
+       "      <th>ID_ESTACION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4830</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>56.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66013</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127196</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188379</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249562</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310745</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371928</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433111</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494294</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>555477</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>616660</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677843</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739026</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>800209</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>861392</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>922575</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>983758</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1044941</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1106124</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1167307</th>\n",
+       "      <td>2016-01-19 11:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               validTimeUtc  precip1Hour  pressureChange  relativeHumidity  \\\n",
+       "4830    2016-01-19 11:20:00          NaN             NaN              56.9   \n",
+       "66013   2016-01-19 11:20:00          NaN             NaN              57.8   \n",
+       "127196  2016-01-19 11:20:00          NaN             NaN              59.1   \n",
+       "188379  2016-01-19 11:20:00          NaN             NaN              53.3   \n",
+       "249562  2016-01-19 11:20:00          NaN             NaN              61.1   \n",
+       "310745  2016-01-19 11:20:00          NaN             NaN              55.9   \n",
+       "371928  2016-01-19 11:20:00          NaN             NaN              54.8   \n",
+       "433111  2016-01-19 11:20:00          NaN             NaN              54.1   \n",
+       "494294  2016-01-19 11:20:00          NaN             NaN              55.4   \n",
+       "555477  2016-01-19 11:20:00          NaN             NaN              58.8   \n",
+       "616660  2016-01-19 11:20:00          NaN             NaN              62.0   \n",
+       "677843  2016-01-19 11:20:00          NaN             NaN              58.5   \n",
+       "739026  2016-01-19 11:20:00          NaN             NaN              55.7   \n",
+       "800209  2016-01-19 11:20:00          NaN             NaN              59.5   \n",
+       "861392  2016-01-19 11:20:00          NaN             NaN              59.4   \n",
+       "922575  2016-01-19 11:20:00          NaN             NaN              53.3   \n",
+       "983758  2016-01-19 11:20:00          NaN             NaN              58.0   \n",
+       "1044941 2016-01-19 11:20:00          NaN             NaN              61.3   \n",
+       "1106124 2016-01-19 11:20:00          NaN             NaN              58.8   \n",
+       "1167307 2016-01-19 11:20:00          NaN             NaN              59.0   \n",
+       "\n",
+       "         snow1Hour  temperature  temperatureDewPoint  temperatureFeelsLike  \\\n",
+       "4830           NaN          NaN                  NaN                   NaN   \n",
+       "66013          NaN          NaN                  NaN                   NaN   \n",
+       "127196         NaN          NaN                  NaN                   NaN   \n",
+       "188379         NaN          NaN                  NaN                   NaN   \n",
+       "249562         NaN          NaN                  NaN                   NaN   \n",
+       "310745         NaN          NaN                  NaN                   NaN   \n",
+       "371928         NaN          NaN                  NaN                   NaN   \n",
+       "433111         NaN          NaN                  NaN                   NaN   \n",
+       "494294         NaN          NaN                  NaN                   NaN   \n",
+       "555477         NaN          NaN                  NaN                   NaN   \n",
+       "616660         NaN          NaN                  NaN                   NaN   \n",
+       "677843         NaN          NaN                  NaN                   NaN   \n",
+       "739026         NaN          NaN                  NaN                   NaN   \n",
+       "800209         NaN          NaN                  NaN                   NaN   \n",
+       "861392         NaN          NaN                  NaN                   NaN   \n",
+       "922575         NaN          NaN                  NaN                   NaN   \n",
+       "983758         NaN          NaN                  NaN                   NaN   \n",
+       "1044941        NaN          NaN                  NaN                   NaN   \n",
+       "1106124        NaN          NaN                  NaN                   NaN   \n",
+       "1167307        NaN          NaN                  NaN                   NaN   \n",
+       "\n",
+       "         windSpeed  ID_ESTACION  \n",
+       "4830          10.8           13  \n",
+       "66013         11.2           18  \n",
+       "127196        11.2            2  \n",
+       "188379        11.5            9  \n",
+       "249562        10.1            4  \n",
+       "310745        11.2           11  \n",
+       "371928        11.2           12  \n",
+       "433111        11.2           10  \n",
+       "494294        11.2            7  \n",
+       "555477        10.8           15  \n",
+       "616660        10.1           17  \n",
+       "677843        10.8            3  \n",
+       "739026        11.2           19  \n",
+       "800209        10.8           14  \n",
+       "861392        10.4            6  \n",
+       "922575        11.2            0  \n",
+       "983758        11.2            5  \n",
+       "1044941       10.1            1  \n",
+       "1106124       11.2           16  \n",
+       "1167307       10.8            8  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[df2[\"precip1Hour\"].isna() == True]"
    ]
   },
   {
