--- a/PRETRACTAMENT/TRAIN_PREPROCESSING_4.ipynb
+++ b/PRETRACTAMENT/TRAIN_PREPROCESSING_4.ipynb
@@ -313,38 +313,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bab1a401",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0           660\n",
-       "1           660\n",
-       "2           520\n",
-       "3           520\n",
-       "12      650-660\n",
-       "         ...   \n",
-       "9596        700\n",
-       "9597        700\n",
-       "9598        700\n",
-       "9599        700\n",
-       "9600        700\n",
-       "Name: ALTITUD, Length: 9547, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_df_alt_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "f16696a8",
    "metadata": {},
    "outputs": [],
@@ -355,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c9a405d0",
    "metadata": {},
    "outputs": [],
@@ -399,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d94383d7",
    "metadata": {},
    "outputs": [],
@@ -415,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1a672466",
    "metadata": {},
    "outputs": [
@@ -433,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7895d106",
    "metadata": {},
    "outputs": [],
@@ -444,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2ccdb4a8",
    "metadata": {},
    "outputs": [],
@@ -457,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e1ec0837",
    "metadata": {},
    "outputs": [],
@@ -468,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "84565482",
    "metadata": {},
    "outputs": [
@@ -696,7 +664,7 @@
        "[9601 rows x 11 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "247f7d7f",
    "metadata": {},
    "outputs": [],
@@ -718,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "29c97c45",
    "metadata": {},
    "outputs": [],
@@ -728,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "cb681223",
    "metadata": {},
    "outputs": [
@@ -956,7 +924,7 @@
        "[9601 rows x 11 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "b420ed41",
    "metadata": {},
    "outputs": [],
@@ -995,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "583753b5",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "50ebdb4a",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "id": "60e42567",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "1314f7a0",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "2466f74d",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "id": "763323d4",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "id": "b2430e7a",
    "metadata": {},
    "outputs": [],
@@ -1113,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "id": "511cd835",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 27,
    "id": "b832af3b",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "id": "bf0d8686",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "id": "9aa1d3e8",
    "metadata": {},
    "outputs": [],
@@ -1218,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "id": "968aa612",
    "metadata": {},
    "outputs": [],
@@ -1228,12 +1196,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "id": "35e6d0bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_22_cas1.to_csv(\"../DATASETS_FINALS/df_22_cas1.csv\", index_label = \"INDEX\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c6940dbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CAMPAÑA</th>\n",
+       "      <th>ID_FINCA</th>\n",
+       "      <th>ID_ZONA</th>\n",
+       "      <th>ID_ESTACION</th>\n",
+       "      <th>ALTITUD</th>\n",
+       "      <th>VARIEDAD</th>\n",
+       "      <th>MODO</th>\n",
+       "      <th>TIPO</th>\n",
+       "      <th>COLOR</th>\n",
+       "      <th>SUPERFICIE</th>\n",
+       "      <th>PRODUCCION</th>\n",
+       "      <th>ALTITUD_MIN</th>\n",
+       "      <th>ALTITUD_DIF</th>\n",
+       "      <th>CAMPAÑA_ESTACION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8526</th>\n",
+       "      <td>22</td>\n",
+       "      <td>48626</td>\n",
+       "      <td>302</td>\n",
+       "      <td>13</td>\n",
+       "      <td>600</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.7503</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8527</th>\n",
+       "      <td>22</td>\n",
+       "      <td>47921</td>\n",
+       "      <td>302</td>\n",
+       "      <td>13</td>\n",
+       "      <td>600</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.3735</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8528</th>\n",
+       "      <td>22</td>\n",
+       "      <td>5696</td>\n",
+       "      <td>919</td>\n",
+       "      <td>14</td>\n",
+       "      <td>650-660</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.6200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>650</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2022_14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8529</th>\n",
+       "      <td>22</td>\n",
+       "      <td>98814</td>\n",
+       "      <td>919</td>\n",
+       "      <td>14</td>\n",
+       "      <td>650-660</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.3267</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>650</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2022_14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8530</th>\n",
+       "      <td>22</td>\n",
+       "      <td>98814</td>\n",
+       "      <td>919</td>\n",
+       "      <td>14</td>\n",
+       "      <td>650-660</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.7724</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>650</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2022_14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9596</th>\n",
+       "      <td>22</td>\n",
+       "      <td>37461</td>\n",
+       "      <td>239</td>\n",
+       "      <td>6</td>\n",
+       "      <td>700</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.6800</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9597</th>\n",
+       "      <td>22</td>\n",
+       "      <td>58769</td>\n",
+       "      <td>239</td>\n",
+       "      <td>6</td>\n",
+       "      <td>700</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9598</th>\n",
+       "      <td>22</td>\n",
+       "      <td>58769</td>\n",
+       "      <td>239</td>\n",
+       "      <td>6</td>\n",
+       "      <td>700</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0700</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9599</th>\n",
+       "      <td>22</td>\n",
+       "      <td>88928</td>\n",
+       "      <td>239</td>\n",
+       "      <td>6</td>\n",
+       "      <td>700</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.5727</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9600</th>\n",
+       "      <td>22</td>\n",
+       "      <td>88928</td>\n",
+       "      <td>239</td>\n",
+       "      <td>6</td>\n",
+       "      <td>700</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.6099</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022_6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1031 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CAMPAÑA ID_FINCA ID_ZONA ID_ESTACION  ALTITUD VARIEDAD MODO TIPO COLOR  \\\n",
+       "8526      22    48626     302          13      600       32    2    0     1   \n",
+       "8527      22    47921     302          13      600       32    2    0     1   \n",
+       "8528      22     5696     919          14  650-660       59    1    0     1   \n",
+       "8529      22    98814     919          14  650-660       32    2    0     1   \n",
+       "8530      22    98814     919          14  650-660       40    2    0     1   \n",
+       "...      ...      ...     ...         ...      ...      ...  ...  ...   ...   \n",
+       "9596      22    37461     239           6      700       52    2    0     1   \n",
+       "9597      22    58769     239           6      700       32    2    0     1   \n",
+       "9598      22    58769     239           6      700       59    2    0     1   \n",
+       "9599      22    88928     239           6      700       40    2    0     1   \n",
+       "9600      22    88928     239           6      700       52    2    0     1   \n",
+       "\n",
+       "      SUPERFICIE  PRODUCCION  ALTITUD_MIN  ALTITUD_DIF CAMPAÑA_ESTACION  \n",
+       "8526      3.7503         NaN          600            0          2022_13  \n",
+       "8527      7.3735         NaN          600            0          2022_13  \n",
+       "8528      7.6200         NaN          650           10          2022_14  \n",
+       "8529      3.3267         NaN          650           10          2022_14  \n",
+       "8530      2.7724         NaN          650           10          2022_14  \n",
+       "...          ...         ...          ...          ...              ...  \n",
+       "9596      3.6800         NaN          700            0           2022_6  \n",
+       "9597      4.2500         NaN          700            0           2022_6  \n",
+       "9598      4.0700         NaN          700            0           2022_6  \n",
+       "9599      4.5727         NaN          700            0           2022_6  \n",
+       "9600      1.6099         NaN          700            0           2022_6  \n",
+       "\n",
+       "[1031 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_22_cas1"
    ]
   },
   {
@@ -1246,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "id": "ee11957a",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "id": "dd039c64",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "id": "08fce06d",
    "metadata": {},
    "outputs": [],
@@ -1278,12 +1521,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "id": "ee8fac90",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_22_cas2.to_csv(\"../DATASETS_FINALS/df_22_cas2.csv\", index_label = \"INDEX\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76dfe743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas2"
    ]
   },
   {
@@ -1296,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "id": "e804ec0f",
    "metadata": {},
    "outputs": [],
@@ -1306,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 37,
    "id": "6173bc60",
    "metadata": {},
    "outputs": [],
@@ -1316,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 38,
    "id": "4bf33a04",
    "metadata": {},
    "outputs": [],
@@ -1326,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 39,
    "id": "b89ca11c",
    "metadata": {},
    "outputs": [],
@@ -1344,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "id": "83665d1a",
    "metadata": {},
    "outputs": [],
@@ -1354,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "id": "19d2ee38",
    "metadata": {},
    "outputs": [],
@@ -1364,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "id": "4ee4da8e",
    "metadata": {},
    "outputs": [],
